--- a/frontend.yaml
+++ b/frontend.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: frontendcontainer
-        image: martin2176/demofrontend:v1.0
+        image: martinharnessacr.azurecr.io/demofrontend:v1.0
         imagePullPolicy: Always
         readinessProbe:
          httpGet:
@@ -116,7 +116,7 @@ spec:
           - /apm/dd-java-agent.jar
           - /opt/dd/
          name: datadog-java-tracer
-         image: martin2176/dd-java-agent:latest
+         image: martinharnessacr.azurecr.io/dd-java-agent:latest
          volumeMounts:
          - mountPath: /opt/dd
            name: datadog-java-tracer
