--- a/frontendvirtualserviceheaderbased.yaml
+++ b/frontendvirtualserviceheaderbased.yaml
@@ -10,7 +10,7 @@ spec:
   http:
   - match:
     - uri:
-       prefix: /v1.0/weather
+       prefix: /weather
       headers:
        branch:
         exact: waterworks
@@ -30,6 +30,6 @@ spec:
     route:
      - destination:
         host: frontend.demoapp.svc.cluster.local
-        subset: v11
+        subset: v10
         port:
          number: 8080           
